PMforce/src/objects/Feedback_Option_Main__c.object
<CustomObject>
    <fields>
        <fullName>Option_Five__c</fullName>
        <label>Option Five</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Option_Four__c</fullName>
        <label>Option Four</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Option_One__c</fullName>
        <label>Option One</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Option_Three__c</fullName>
        <label>Option Three</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Option_Two__c</fullName>
        <label>Option Two</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Question__c</fullName>
        <label>Related Question</label>
        <referenceTo>Feedback_Question_Main__c</referenceTo>
        <relationshipLabel>Feedback Option Main</relationshipLabel>
        <relationshipName>Feedback_Option_Main</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Feedback Option Main</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Feedback Option Main Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Feedback Option Main</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>